syntax = "proto3";

import "google/protobuf/wrappers.proto";
package ecommerce;

option go_package = "./test";

service ProductInfo {
  rpc addProduct(Product) returns (ProductID);
  rpc getProduct(ProductID) returns (Product);
  rpc searchProduct(google.protobuf.StringValue) returns (stream Product);
  rpc updateProduct(stream Product) returns (google.protobuf.StringValue);
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message ProductID {
  string value = 1;
}